tests/Rules/Media/Fixtures/invalid/input_image_no_alt.html.twig
{# 1 errors #}
<input type="image" src="submit.png">
